# handmade

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clion-disclaimer.txt  compile_commands.json  extend_compile_commands.py  missing_features.md
.nvimrc/: init.lua
code/: handmade.cpp  handmade.h  handmade_assert.h  handmade_defines.h  handmade_intrinsics.h  linux_handmade.cpp  raylib_linux_handmade.cpp  sdl3_handmade.cpp  sdl3_handmade.h  sdl_handmade.cpp  sdl_handmade.h  test_framework.h  test_handmade.cpp  win32_handmade.cpp
